# AI-Toolbox

./: .gitignore  .travis.yml  .ycm_extra_conf.py  AMDP_8hpp.html  AMDP_8hpp_source.html  APSP_8hpp.html  APSP_8hpp.js  APSP_8hpp_source.html  Adam_8hpp.html  Adam_8hpp_source.html  Bandit_2Algorithms_2Utils_2GraphUtils_8hpp.html  Bandit_2Algorithms_2Utils_2GraphUtils_8hpp_source.html  Bandit_2Experience_8hpp.html  Bandit_2Experience_8hpp_source.html  Bandit_2Model_8hpp.html  Bandit_2Model_8hpp_source.html  Bandit_2Policies_2EpsilonPolicy_8hpp.html  Bandit_2Policies_2EpsilonPolicy_8hpp_source.html  Bandit_2Policies_2PolicyInterface_8hpp.html  Bandit_2Policies_2PolicyInterface_8hpp_source.html  Bandit_2Policies_2QGreedyPolicy_8hpp.html  Bandit_2Policies_2QGreedyPolicy_8hpp_source.html  Bandit_2Policies_2QSoftmaxPolicy_8hpp.html  Bandit_2Policies_2QSoftmaxPolicy_8hpp_source.html  Bandit_2Policies_2RandomPolicy_8hpp.html  Bandit_2Policies_2RandomPolicy_8hpp_source.html  Bandit_2Policies_2ThompsonSamplingPolicy_8hpp.html  Bandit_2Policies_2ThompsonSamplingPolicy_8hpp_source.html  Bandit_2Types_8hpp.html  Bandit_2Types_8hpp.js  Bandit_2Types_8hpp_source.html  BayesianNetwork_8hpp.html  BayesianNetwork_8hpp.js  BayesianNetwork_8hpp_source.html  BeliefGenerator_8hpp.html  BeliefGenerator_8hpp_source.html  BlindStrategies_8hpp.html  BlindStrategies_8hpp_source.html  CMakeLists.txt  CONTRIBUTING.md  (+1681 more)
examples/: CMakeLists.txt  Makefile  tiger_antelope.py  tutorialcode.cpp
examples/MDP/: Makefile  cliff.cpp  tiger_antelope.cpp  tiger_antelope.py
examples/POMDP/: tiger_door.cpp  tiger_door.py
examples/Python/: tiger_antelope.py
src/: CMakeLists.txt  DynaQ.cpp  DynaQInterface.cpp  EpsilonPolicy.cpp  Experience.cpp  MDP.cpp  MDPIO.cpp  MDPSolution.cpp  MDPSolver.cpp  MDPUtils.cpp  Model.cpp  Policy.cpp  PolicyInterface.cpp  PrioritizedSweeping.cpp  QGreedyPolicy.cpp  QLearning.cpp  QPolicy.cpp  QPolicyInterface.cpp  RLModel.cpp  Seeder.cpp  Seeder.hpp  Solver.cpp  ValueIteration.cpp  WoLFPolicy.cpp
src/Bandit/: Experience.cpp
src/Bandit/Algorithms/: RollingAverage.cpp
src/Bandit/Policies/: ESRLPolicy.cpp  EpsilonPolicy.cpp  GreedyPolicy.cpp  LRPPolicy.cpp  QGreedyPolicy.cpp  QSoftmaxPolicy.cpp  RandomPolicy.cpp  SuccessiveRejectsPolicy.cpp  T3CPolicy.cpp  ThompsonSamplingPolicy.cpp  TopTwoThompsonSamplingPolicy.cpp
src/Factored/Bandit/: Experience.cpp
src/Factored/MDP/: CooperativeExperience.cpp  (+7 more)
src/FactoredMDP/: FactoredContainer.cpp  Types.cpp  Utils.cpp
src/Impl/: CassandraParser.cpp  Seeder.cpp
src/LP/: LpSolveWrapper.cpp
src/MDP/: Experience.cpp  IO.cpp  Model.cpp  RLModel.cpp  SparseExperience.cpp  SparseModel.cpp  SparseRLModel.cpp  Utils.cpp
src/POMDP/: IO.cpp  IncrementalPruning.cpp  Utils.cpp
src/Python/: AIToolboxWrappers.cpp  BanditWrappers.cpp  FactoredWrappers.cpp  GameWrappers.cpp  MDPWrappers.cpp  POMDPWrappers.cpp  Types.cpp  Utils.cpp  Utils.hpp
src/Tools/: CassandraParser.cpp  Statistics.cpp
src/Utils/: Adam.cpp  Combinatorics.cpp  IO.cpp  Polytope.cpp  Probability.cpp  StorageEigen.cpp
test/: CMakeLists.txt  ExperienceTests.cpp  GlobalFixtures.hpp  MDP_RLModelTests.cpp  QLearningTests.cpp  Table.cpp  Table.h  ToolsTests.cpp  UtilsAdamTests.cpp  UtilsCoreTests.cpp  UtilsIOTests.cpp  UtilsPolytopeTests.cpp  UtilsProbabilityTests.cpp  UtilsPruneTests.cpp  UtilsTests.cpp  UtilsVertexEnumerationTests.cpp  ValueIterationTests.cpp  WoLFPolicyTests.cpp  main.cpp
test/Bandit/: ESRLPolicyTests.cpp  GreedyPolicyTests.cpp  LRPPolicyTests.cpp  ModelTests.cpp  QGreedyPolicyTests.cpp  QSoftmaxPolicyTests.cpp  SuccessiveRejectsPolicyTests.cpp  ThompsonSamplingPolicyTests.cpp
test/Factored/: BayesianNetworkTests.cpp  CooperativeExperienceTests.cpp  CooperativeMaximumLikelihoodModelTests.cpp  CooperativeModelTests.cpp  CooperativePrioritizedSweepingTests.cpp  CooperativeQLearningTests.cpp  CooperativeRLModelTests.cpp  ESRLPolicyTests.cpp  FactorGraphTests.cpp  FactoredContainerTests.cpp  FactoredLPTests.cpp  FilterMapTests.cpp  JointActionLearnerTests.cpp  LLRPolicyTests.cpp  LLRTests.cpp  LRPPolicyTests.cpp  LinearProgrammingTests.cpp  MAUCEPolicyTests.cpp  MAUCETests.cpp  MaxPlusTests.cpp  MultiObjectiveVariableEliminationTests.cpp  SparseCooperativeQLearningTests.cpp  TestTests.cpp  UCVETests.cpp  UtilsTests.cpp  VariableEliminationTests.cpp
test/FactoredMDP/: FactorGraphTests.cpp  FactoredContainerTests.cpp  LLRTests.cpp  MAUCETests.cpp  MultiObjectiveVariableEliminationTests.cpp  SparseCooperativeQLearningTests.cpp  UCVETests.cpp  UtilsTests.cpp  VariableEliminationTests.cpp  XXXTests.cpp
test/Game/: ESRLPolicyTests.cpp  LRPPolicyTests.cpp
test/MDP/: CliffProblem.hpp  CornerProblem.hpp  DoubleQLearningTests.cpp  Dyna2Tests.cpp  DynaQTests.cpp  EnvironmentsTests.cpp  ExpectedSARSATests.cpp  ExperienceTests.cpp  HystereticQLearningTests.cpp  LinearProgrammingTests.cpp  MCTSExtendedTests.cpp  MCTSTests.cpp  MaximumLikelihoodModelTests.cpp  ModelTests.cpp  PGAAPPPolicyTests.cpp  PolicyEvaluationTests.cpp  PolicyIterationTests.cpp  PrioritizedSweepingTests.cpp  QGreedyPolicyTests.cpp  QLTests.cpp  QLearningTests.cpp  RLModelTests.cpp  RetraceLTests.cpp  SARSALTests.cpp  SARSATests.cpp  SparseExperienceTests.cpp  SparseMaximumLikelihoodModelTests.cpp  SparseModelTests.cpp  SparseRLModelTests.cpp  ThompsonModelTests.cpp  TreeBackupLTests.cpp  TypesTests.cpp  UtilsPolytopeTests.cpp  ValueIterationTests.cpp  WoLFPolicyTests.cpp
test/POMDP/: AMDPTests.cpp  BlindStrategiesTests.cpp  FastInformedBoundTests.cpp  GapMinTests.cpp  IncrementalPruningTests.cpp  LinearSupportTests.cpp  ModelTests.cpp  PBVITests.cpp  PERSEUSTests.cpp  POMCPTests.cpp  PolicyTests.cpp  RTBSSTests.cpp  SARSOPTests.cpp  SparseModelTests.cpp  TigerProblem.hpp  TypesTests.cpp  UtilsTests.cpp  WitnessTests.cpp  rPOMCPTests.cpp
test/data/: cheng.D3-5.POMDP  corner.MDP  ejs4.POMDP  experience.txt  mdp_dense_experience.txt  mdp_dense_model.txt  mdp_model.txt  mdp_sparse_experience.txt  mdp_sparse_model.txt  model.txt  pomdp_dense_model.txt  pomdp_model.txt  pomdp_sparse_model.txt
(+715 files in other folders)
